--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.9.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "open": "0.0.5",
