--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,15 @@
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "rules": {
-    "no-console": "warn"
+    "comma-dangle": [2, {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "never"
+    }],
+    "no-console": "warn",
+    "semi-spacing": [2, {"before": false, "after": true}],
+    "semi": 2
   }
 }
