--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "website for J & J Bakery",
   "main": "index.js",
   "scripts": {
+    "prestart": "babel-node tools/startMessage.js",
     "start": "babel-node server.js"
   },
   "author": "Jonathan Spiegel",
@@ -25,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "colors": "^1.3.0",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
