--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jjbakery",
   "version": "1.0.0",
-  "description": "website for J & J Bakery",
+  "description": "website for J&J Bakery",
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
@@ -16,7 +16,8 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -26,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.6",
     "colors": "^1.3.0",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -41,7 +43,6 @@
     "stylelint": "^9.2.1",
     "stylelint-webpack-plugin": "^0.10.5",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
   }
