--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.6",
     "colors": "^1.3.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
