--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.6.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -40,6 +42,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "open": "0.0.5",
+    "postcss-loader": "^2.1.5",
     "style-loader": "^0.21.0",
     "stylelint": "^9.2.1",
     "stylelint-webpack-plugin": "^0.10.5",
